--- a/Home.html
+++ b/Home.html
@@ -1,1 +1,11 @@
-pines
+<!DOCTYPE html>
+<html lang="en">
+<head>
+<meta charset="UTF-8">
+<meta http-equiv="refresh" content="5;url=https://example.com">
+<title>Redirecting...</title>
+</head>
+<body>
+<p>You are being redirected to <a href="https://www.youtube.com/">example.com</a></p>
+</body>
+</html>
